# kicktipp-wm

./: .env.example  .gitignore  README.md  compute_bets.py  kicktipp.py  predictions.py  pyproject.toml  tipico.py  util.py
