[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kicktipp-wm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=0.9.9",
    "mechanicalsoup>=1.4.0",
    "numpy>=2.4.6",
    "requests>=2.31.0",
]

[project.scripts]
compute-bets = "compute_bets:main"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools]
py-modules = ["compute_bets", "kicktipp", "predictions", "tipico", "util"]
